--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ paginate = 5
 
 [[params.searchEngines]]
   name = "Google"
-  activated = true
+  activated = false
   url = "https://www.google.com/search"
 
 [[params.searchEngines]]
