Correction d'un lien

--- a/data/links.yml
+++ b/data/links.yml
@@ -13,7 +13,7 @@
       url: https://www.cyber-news.fr
       icon: fab fa-user-secret
     - title: Cyber-Owl
-      url: https:/cyberowl.mousqueton.io
+      url: https://cyberowl.mousqueton.io
       icon: fab fa-binoculars
     - title: Github CVE Monitor
       url: https://cve-monitor.mousqueton.io/
