--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://home.mousqueton.io/'
+baseURL = 'https://toolbox.mousqueton.io/'
 languageCode = 'en-us'
 title = 'Home page for Mousqueton Cyber Securirty'
 
